# meal_telegram_agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily_meal.yml
src/meal_telegram_agent/: agents.py  crew.py  main.py  tasks.py
