[project]
name = "meal_telegram_agent"
version = "0.1.0"
description = "meal_telegram_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
meal_telegram_agent = "meal_telegram_agent.main:run"
run_crew = "meal_telegram_agent.main:run"
train = "meal_telegram_agent.main:train"
replay = "meal_telegram_agent.main:replay"
test = "meal_telegram_agent.main:test"
run_with_trigger = "meal_telegram_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
